--- a/front/src/index.html
+++ b/front/src/index.html
@@ -5,7 +5,8 @@
   <title>Spending</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
+  <link rel="icon" type="image/png" href="assets/img/spending-logo.png" />
 </head>
 <body>
   <app-root>Loading...</app-root>
